<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bio_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="#33000000"
        />

    <ProgressBar
        android:id="@+id/progressBar_bio"
        android:backgroundTint="@color/light_brown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_container"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/ic_wave_up"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="32dp"
            android:foregroundGravity="center"
            app:cardCornerRadius="160dp"
            app:cardElevation="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/avatar_placeholder" />


        </androidx.cardview.widget.CardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/see_more_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:cardBackgroundColor="@color/light_brown"
            app:cardCornerRadius="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="24dp">

                <TextView
                    android:id="@+id/static_perfil_more_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_content_paste_24"
                    android:text="@string/complete_profile"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/static_perfil_more_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tags_perfil"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/static_perfil_more_title"
                    app:layout_constraintTop_toBottomOf="@+id/static_perfil_more_title" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_see_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:drawableEnd="@drawable/ic_right"
                    android:text="@string/see"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:cornerRadius="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView

            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toTopOf="@+id/see_more_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/tv_static_repos"
                    style="@style/TextView.Status"
                    android:layout_marginEnd="32dp"
                    android:text="@string/repo"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_static_followers"
                    app:layout_constraintEnd_toStartOf="@+id/tv_static_followers"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_static_followers" />

                <TextView
                    android:id="@+id/tv_repo"
                    style="@style/TextView.Number"
                    app:layout_constraintEnd_toEndOf="@+id/tv_static_repos"
                    app:layout_constraintStart_toStartOf="@id/tv_static_repos"
                    app:layout_constraintTop_toBottomOf="@+id/tv_static_repos" />

                <TextView
                    android:id="@+id/tv_static_followers"
                    style="@style/TextView.Status"
                    android:layout_marginTop="8dp"
                    android:text="@string/followers"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_follower"
                    style="@style/TextView.Number"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/tv_static_followers"
                    app:layout_constraintStart_toStartOf="@id/tv_static_followers"
                    app:layout_constraintTop_toBottomOf="@id/tv_static_followers" />

                <TextView
                    android:id="@+id/tv_static_following"
                    style="@style/TextView.Status"
                    android:text="@string/following"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_static_followers"
                    app:layout_constraintTop_toTopOf="@+id/tv_static_followers" />

                <TextView
                    android:id="@+id/tv_following"
                    style="@style/TextView.Number"
                    app:layout_constraintEnd_toEndOf="@id/tv_static_following"
                    app:layout_constraintStart_toStartOf="@id/tv_static_following"
                    app:layout_constraintTop_toBottomOf="@id/tv_static_following" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextView"
            android:layout_width="201dp"
            android:layout_height="49dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_person"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:text="Derleymad" />

        <TextView
            android:id="@+id/tv_desc"
            style="@style/TextView"
            android:layout_width="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:ellipsize="end"
            android:letterSpacing=".04"
            android:lineSpacingExtra="8dp"
            android:maxLines="4"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:text="Eu sou um amante do mundo linux e manjo muito de ktlin, em constante crescimento,eu sou um amante do mundo linux e manjo muito de ktlin, em constante crescimento" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
